# simple-one-to-many

./: .gitignore  README.md  cabal.project  hie.yaml  shell.nix
bech32_scripts/: base_to_friendly.sh  find_address.sh
cli_scripts/: .gitignore  balances.sh  createGroupPayout.sh  createRoyaltyPayout.sh  path_to_cli.sh  path_to_socket.sh  redeemGroupPayout.sh  redeemRoyaltyPayout.sh  viewDatumHashData.sh
cli_scripts/data/: datum.json  group_payout.plutus
group-payout/: full-build-project.sh  group-payout.cabal  group_payout.plutus
group-payout/app/: group-payout.hs
group-payout/pab/: Main.hs
group-payout/src/: GroupPayout.hs
royalty-payout/: build-project.sh  royalty-payout.cabal  royalty_payout.plutus
royalty-payout/app/: royalty-payout.hs
royalty-payout/pab/: Main.hs
royalty-payout/src/: RoyaltyPayout.hs
scripts/: explode_on_pab.sh  path_to_socket.sh  smoosh_on_pab.sh
simulated_pab_scripts/: README.md  create_wallet.sh  explode_the_ball.sh  smoosh_the_ball.sh
testnet_pab_scripts/: README.md  activate-contract.sh  data.json  integration_test.sh
